--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
-test/*.log
-*.gem
+/.bundle/
+/.yardoc
+/Gemfile.lock
+/_yardoc/
+/coverage/
+/doc/
+/pkg/
+/spec/reports/
+/tmp/
+
+# rspec failure tracking
+.rspec_status
